<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".Fragments.AddReceiptView">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/add_step_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/receiptTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:fontFamily="@font/paytone_one"
                android:hint="@string/receiptTitle"
                android:textColorHint="@color/green_bright" />

            <Spinner
                android:id="@+id/categoryReceiptSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_border"/>

            <ImageView
                android:id="@+id/receiptImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/add_image_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/paytone_one"
                android:gravity="center_horizontal"
                android:text="@string/ingredientsTitle"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/ingredientsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="start"
                android:hint="@string/ingredientsHint"
                android:minHeight="100dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/green_bright" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/paytone_one"
                android:gravity="center_horizontal"
                android:text="@string/cookingSteps"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stepRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/add_step_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_bright"
        android:text="@string/add_step_btn"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/save_receipt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_receipt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_bright"
        android:text="@string/SaveReceipts_btn_text"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>